navbar is now one

--- a/banking/templates/banking/services.html
+++ b/banking/templates/banking/services.html
@@ -91,300 +91,7 @@
         </div>
         <!-- End Top Header Area -->
 
-        <!-- Start Navbar Area -->
-        <div class="navbar-area">
-            <div class="main-responsive-nav">
-                <div class="container">
-                    <div class="main-responsive-menu">
-                        <div class="logo">
-                            <a href="{% url 'banking_home' %}">
-                                <img src="{% static 'banking/assets/img/logo-1.png' %}" alt="image">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="main-navbar">
-                <div class="container">
-                    <nav class="navbar navbar-expand-md navbar-light">
-                        <a class="navbar-brand" href="{% url 'banking_home' %}">
-                            <img src="{% static 'banking/assets/img/logo-1.png' %}" alt="image">
-                        </a>
-
-                        <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        Home 
-                                        <i class='bx bx-chevron-down'></i>
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li class="nav-item">
-                                            <a href="{% url 'banking_home' %}" class="nav-link">
-                                                Home One
-                                            </a>
-                                        </li>
-
-                                        <li class="nav-item">
-                                            <a href="index-2.html" class="nav-link">
-                                                Home Two
-                                            </a>
-                                        </li>
-
-                                        <li class="nav-item">
-                                            <a href="index-3.html" class="nav-link">
-                                                Home Three
-                                            </a>
-                                        </li>
-
-                                        <li class="nav-item">
-                                            <a href="index-4.html" class="nav-link">
-                                                Home Four
-                                            </a>
-                                        </li>
-
-                                        <li class="nav-item">
-                                            <a href="index-5.html" class="nav-link">
-                                                Home Five
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a href="credit-card.html" class="nav-link">
-                                        Credit Cards
-                                    </a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        Pages 
-                                        <i class='bx bx-chevron-down'></i>
-                                    </a>
-
-                                    <ul class="dropdown-menu">
-                                        <li class="nav-item">
-                                            <a href="{% url 'banking_about' %}" class="nav-link">
-                                                About
-                                            </a>
-                                        </li>
-
-                                        <li class="nav-item">
-                                            <a href="team.html" class="nav-link">
-                                                Team
-                                            </a>
-                                        </li>
-
-                                        <li class="nav-item">
-                                            <a href="{% url 'banking_pricing' %}" class="nav-link">
-                                                Pricing
-                                            </a>
-                                        </li>
-
-                                        <li class="nav-item">
-                                            <a href="open-account.html" class="nav-link">
-                                                Open Account
-                                            </a>
-                                        </li>
-
-                                        <li class="nav-item">
-                                            <a href="security.html" class="nav-link">
-                                                Security
-                                            </a>
-                                        </li>
-
-                                        <li class="nav-item">
-                                            <a href="atm-and-bank-locations.html" class="nav-link">
-                                                ATM and Bank Locations
-                                            </a>
-                                        </li>
-
-                                        <li class="nav-item">
-                                            <a href="testimonial.html" class="nav-link">
-                                                Testimonial
-                                            </a>
-                                        </li>
-
-                                        <li class="nav-item">
-                                            <a href="my-account.html" class="nav-link">
-                                                My Account
-                                            </a>
-                                        </li>
-
-                                        <li class="nav-item">
-                                            <a href="#" class="nav-link">
-                                                Projects 
-                                                <i class='bx bx-chevron-down'></i>
-                                            </a>
-        
-                                            <ul class="dropdown-menu">
-                                                <li class="nav-item">
-                                                    <a href="projects-1.html" class="nav-link">
-                                                        Projects Two Column
-                                                    </a>
-                                                </li>
-        
-                                                <li class="nav-item">
-                                                    <a href="projects-2.html" class="nav-link">
-                                                        Projects Three Column
-                                                    </a>
-                                                </li>
-        
-                                                <li class="nav-item">
-                                                    <a href="projects-3.html" class="nav-link">
-                                                        Projects Four Column
-                                                    </a>
-                                                </li>
-        
-                                                <li class="nav-item">
-                                                    <a href="projects-details.html" class="nav-link">
-                                                        Projects Details
-                                                    </a>
-                                                </li>
-                                            </ul>
-                                        </li>
-
-                                        <li class="nav-item">
-                                            <a href="{% url 'banking_faq' %}" class="nav-link">
-                                                FAQ
-                                            </a>
-                                        </li>
-                                    
-                                        <li class="nav-item">
-                                            <a href="error-404.html" class="nav-link">
-                                                Error Page
-                                            </a>
-                                        </li>
-                                
-                                        <li class="nav-item">
-                                            <a href="{% url 'banking_terms-of-service' %}" class="nav-link">
-                                                Terms of Service
-                                            </a>
-                                        </li>
-
-                                        <li class="nav-item">
-                                            <a href="{% url 'banking_privacy-policy' %}" class="nav-link">
-                                                Privacy Policy
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link active">
-                                        Services 
-                                        <i class='bx bx-chevron-down'></i>
-                                    </a>
-
-                                    <ul class="dropdown-menu">
-                                        <li class="nav-item">
-                                            <a href="{% url 'banking_services' %}" class="nav-link active">
-                                                Services
-                                            </a>
-                                        </li>
-
-                                        <li class="nav-item">
-                                            <a href="services-details.html" class="nav-link">
-                                                Services Details
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a href="loans.html" class="nav-link">
-                                        Loans
-                                    </a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        Blog 
-                                        <i class='bx bx-chevron-down'></i>
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li class="nav-item">
-                                            <a href="blog-1.html" class="nav-link">
-                                                Blog Two Column
-                                            </a>
-                                        </li>
-
-                                        <li class="nav-item">
-                                            <a href="blog-2.html" class="nav-link">
-                                                Blog Three Column
-                                            </a>
-                                        </li>
-
-                                        <li class="nav-item">
-                                            <a href="blog-3.html" class="nav-link">
-                                                Blog Four Column
-                                            </a>
-                                        </li>
-
-                                        <li class="nav-item">
-                                            <a href="blog-details.html" class="nav-link">
-                                                Blog Details
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a href="{% url 'banking_contact' %}" class="nav-link">
-                                        Contact
-                                    </a>
-                                </li>
-                            </ul>
-
-                            <div class="others-options d-flex align-items-center">
-                                <div class="option-item">
-                                    <form class="search-box">
-                                        <input type="text" class="form-control" placeholder="Search for..">
-                                        <button type="submit"><i class="flaticon-loupe"></i></button>
-                                    </form>
-                                </div>
-
-                                <div class="option-item">
-                                    <a href="open-account.html" class="default-btn">Open account</a>
-                                </div>
-                            </div>
-                        </div>
-                    </nav>
-                </div>
-            </div>
-
-            <div class="others-option-for-responsive">
-                <div class="container">
-                    <div class="dot-menu">
-                        <div class="inner">
-                            <div class="circle circle-one"></div>
-                            <div class="circle circle-two"></div>
-                            <div class="circle circle-three"></div>
-                        </div>
-                    </div>
-                    
-                    <div class="container">
-                        <div class="option-inner">
-                            <div class="others-options d-flex align-items-center">
-                                <div class="option-item">
-                                    <form class="search-box">
-                                        <input type="text" class="form-control" placeholder="Search for..">
-                                        <button type="submit"><i class="flaticon-loupe"></i></button>
-                                    </form>
-                                </div>
-
-                                <div class="option-item">
-                                    <a href="open-account.html" class="default-btn">Open account</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Navbar Area -->
+        {% include "banking/navbar.html" %}
 
         <!-- Start Page Banner -->
         <div class="page-banner-area item-bg1">
