--- a/banking/templates/banking/index.html
+++ b/banking/templates/banking/index.html
@@ -50,100 +50,7 @@
             height: 90px;
           }
         </style>
-
-        <!-- Start Navbar Area -->
-        <div class="navbar-area">
-            <div class="main-responsive-nav">
-                <div class="container">
-                    <div class="main-responsive-menu">
-                        <div class="logo">
-                            <a href="{% url 'banking_home' %}">
-                                <img src="{% static 'banking/assets/img/logo-1.png' %}" alt="image">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="main-navbar">
-                <div class="container">
-                    <nav class="navbar navbar-expand-md navbar-light">
-                        <a class="navbar-brand" href="{% url 'banking_home' %}">
-                            <img src="{% static 'banking/assets/img/logo-1.png' %}" height="100px" alt="image">
-                        </a>
-
-                        <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
-                            <ul class="navbar-nav">
-                              <li class="nav-item">
-                                  <a href="{% url 'banking_home' %}" class="nav-link">
-                                      Home
-                                  </a>
-                              </li>
-
-                                <li class="nav-item">
-                                    <a href="{% url 'banking_services' %}" class="nav-link">
-                                        Services
-                                    </a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a href="{% url 'banking_about' %}" class="nav-link">
-                                      About Our Company
-                                    </a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a href="{% url 'banking_pricing' %}" class="nav-link">
-                                      Loan & Line Of Credit Pricing
-                                    </a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a href="{% url 'banking_contact' %}" class="nav-link">
-                                        Contact
-                                    </a>
-                                </li>
-                            </ul>
-                            <div class="others-options d-flex align-items-center">
-                                <div class="option-item">
-                                    <a href="#" class="default-btn">Open account</a>
-                                </div>
-                            </div>
-                        </div>
-                    </nav>
-                </div>
-            </div>
-            <div class="others-option-for-responsive">
-                <div class="container">
-                    <div class="dot-menu">
-                        <div class="inner">
-                            <div class="circle circle-one"></div>
-                            <div class="circle circle-two"></div>
-                            <div class="circle circle-three"></div>
-                        </div>
-                    </div>
-
-                    <div class="container">
-                        <div class="option-inner">
-                            <div class="others-options d-flex align-items-center">
-                                <div class="option-item">
-                                    <form class="search-box">
-                                        <input type="text" class="form-control" placeholder="Search for..">
-                                        <button type="submit"><i class="flaticon-loupe"></i></button>
-                                    </form>
-                                </div>
-
-                                <div class="option-item">
-                                    <a href="#" class="default-btn">Open account</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Navbar Area -->
-
+        {% include "banking/navbar.html" %}
         <!-- Start Main Slider Area -->
         <div class="main-slider-area">
             <div class="home-slides owl-carousel owl-theme">
