--- a/banking/templates/banking/contact.html
+++ b/banking/templates/banking/contact.html
@@ -89,7 +89,18 @@
         <!-- End Top Header Area -->
         {% include "banking/navbar.html" %}
         <!-- Start Page Banner -->
-        <div class="page-banner-area item-bg3">
+        <div class="page-banner-area item-bg3" style="
+        position: relative;
+        z-index: 1;
+        background-image: url({% static 'banking/assets/images/page-banner-4.jpg' %});
+        background-position: center center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 100%;
+        padding-top: 150px;
+        padding-bottom: 150px;
+        background-attachment: fixed;
+        ">
             <div class="container">
                 <div class="page-banner-content">
                     <h2>Contact</h2>
