--- a/banking/templates/banking/services.html
+++ b/banking/templates/banking/services.html
@@ -94,7 +94,20 @@
         {% include "banking/navbar.html" %}
 
         <!-- Start Page Banner -->
-        <div class="page-banner-area item-bg1">
+        <div class="page-banner-area item-bg1"
+        style="
+        position: relative;
+            z-index: 1;
+            background-image: url({% static 'banking/assets/images/page-banner-2.jpg' %});
+            background-position: center center;
+            background-size: cover;
+            background-repeat: no-repeat;
+            height: 100%;
+            padding-top: 150px;
+            padding-bottom: 150px;
+            background-attachment: fixed;
+        "
+        >
             <div class="container">
                 <div class="page-banner-content">
                     <h2>Services</h2>
