other links and images added as well

--- a/banking/templates/banking/navbar.html
+++ b/banking/templates/banking/navbar.html
@@ -44,6 +44,21 @@
                                     Loan & Line Of Credit Pricing
                                   </a>
                               </li>
+                              <li class="nav-item">
+                                  <a href="{% url 'banking_faq' %}" class="nav-link">
+                                    Faq
+                                  </a>
+                              </li>
+                              <li class="nav-item">
+                                  <a href="{% url 'banking_privacy-policy' %}" class="nav-link">
+                                    Privacy Policies
+                                  </a>
+                              </li>
+                              <li class="nav-item">
+                                  <a href="{% url 'banking_terms-of-service' %}" class="nav-link">
+                                    Terms of Service
+                                  </a>
+                              </li>
 
                               <li class="nav-item">
                                   <a href="{% url 'banking_contact' %}" class="nav-link">
