--- a/banking/templates/banking/faq.html
+++ b/banking/templates/banking/faq.html
@@ -94,7 +94,18 @@
         {% include "banking/navbar.html" %}
 
         <!-- Start Page Banner -->
-        <div class="page-banner-area">
+        <div class="page-banner-area" style="
+        position: relative;
+        z-index: 1;
+        background-image: url('{% static 'banking/assets/images/page-banner-1.jpg' %}');
+        background-position: center center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 100%;
+        padding-top: 150px;
+        padding-bottom: 150px;
+        background-attachment: fixed;
+        ">
             <div class="container">
                 <div class="page-banner-content">
                     <h2>FAQ</h2>
@@ -187,29 +198,24 @@
                                         <i class='bx bx-plus'></i>
                                         How do I download the App?
                                     </a>
-        
                                     <p class="accordion-content">
                                         Lorem ipsum dolor consectetur adipiscing Fusce varius euismod lacus eget feugiat rorem lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor massa sociis natoque penatibus. varius euismod lacus eget feugiat.
                                     </p>
                                 </li>
-
                                 <li class="accordion-item">
                                     <a class="accordion-title" href="javascript:void(0)">
                                         <i class='bx bx-plus'></i>
                                         How do I set up a new user?
                                     </a>
-        
                                     <p class="accordion-content">
                                         Lorem ipsum dolor consectetur adipiscing Fusce varius euismod lacus eget feugiat rorem lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor massa sociis natoque penatibus. varius euismod lacus eget feugiat.
                                     </p>
                                 </li>
-
                                 <li class="accordion-item">
                                     <a class="accordion-title" href="javascript:void(0)">
                                         <i class='bx bx-plus'></i>
                                         How do I change my previous information?
                                     </a>
-        
                                     <p class="accordion-content">
                                         Lorem ipsum dolor consectetur adipiscing Fusce varius euismod lacus eget feugiat rorem lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor massa sociis natoque penatibus. varius euismod lacus eget feugiat.
                                     </p>
