--- a/goals/templates/goals/goals_base.html
+++ b/goals/templates/goals/goals_base.html
@@ -12,7 +12,7 @@
         <p class="text-muted mv-0 toggle-none">Welcome</p>
       </div>
       <ul class="metisMenu nav flex-column" id="menu">
-        {% if show_portal %}
+        {% if not request.user.profile.can_see_only_created_portals %}
         <li class="nav-item">
           <a href="{% url 'homepage' %}" class="nav-link"><span class="toggle-none">Go Back To Main
               Portal</span></a>
