worked on the client progress system

--- a/goals/templates/goals/create_my_portal.html
+++ b/goals/templates/goals/create_my_portal.html
@@ -17,7 +17,7 @@
     </div>
 </div>
 <section class="main-content" id="starting">
-       {% if show_portal%}
+       {% if not show_portal%}
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="jumbotron jumbotron-fluid">
