worked on the Construction portal

--- a/getdinerotoday/templates/homepage.html
+++ b/getdinerotoday/templates/homepage.html
@@ -615,9 +615,7 @@
           </p>
           <div class="d-flex justify-content-between align-items-center">
             <div class="btn-group">
-              <a href="/wedding_planner" class="btn btn-primary"
-                >Enter Portal</a
-              >
+              <a href="/construction" class="btn btn-primary">Enter Portal</a>
             </div>
           </div>
         </div>
