--- a/business/templates/businessCreditBuilding/domain.html
+++ b/business/templates/businessCreditBuilding/domain.html
@@ -81,7 +81,7 @@
                                 Credible &
                                 Start Being Able To Get Business Credit Without Leveraging Your Personal Credit. </h5>
 
-                            <a target="_blank" class="btn btn-primary btn-block"
+                            <a  class="btn btn-primary btn-block"
                                href="https://www.kleui.com/business/business-credit-steps-onlyprograms/">Click
                                 Here To Get Your <br>Domain Name</a>
 
