--- a/getdinerotoday/templates/components/TopBar.html
+++ b/getdinerotoday/templates/components/TopBar.html
@@ -19,7 +19,7 @@
             <div class="col">
                 <a href="/dashboard" class="admin-logo dark-logo">
                     <h1>
-                        <img src="{{ dynamic.logo.url }}" class="logo-icon margin-r-10">
+                        {% comment %} <img src="{{ dynamic.logo.url }}" class="logo-icon margin-r-10"> {% endcomment %}
                     </h1>
                 </a>
                 <div class="left-nav-toggle">
