--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -470,40 +470,55 @@
         </div>
     </div>
     <script>
-    function Search() {
-
-        var input,filter,ul,li,a,i,txtValue;
-        input = document.getElementById("search");
-        filter = input.value.toUpperCase();
-        ul=document.getElementById('menu');
-        li = document.getElementsByClassName('nav-item');
-
-        //loop through all the list items, and hide those who don't match the search query
-        for (i = 0; i < li.length; i++) {
-            a = li[i].getElementsByTagName("a")[0];
-            txtValue = a.textContent || a.innerText;
-            if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                li[i].style.display = "";
-            } else {
-                li[i].style.display = "none";
-            }
-        }
-
-        // search in the second level navbar
-        var second_level = document.getElementsByClassName('nav-second-level');
-        for(var j = 0;j < second_level.length;j++) {
-            li = second_level[j].getElementsByClassName('nav-item');
-            for(var k = 0;k < li.length;k++) {
-                a = li[k].getElementsByTagName("a")[0];
+        function Search() {
+    
+    var input,filter,ul,li,a,i,txtValue;
+    input = document.getElementById("search");
+    filter = input.value.toUpperCase();
+    ul=document.getElementById('menu');
+    li = ul.getElementsByTagName('li');
+            var input,filter,ul,li,a,i,txtValue;
+            input = document.getElementById("search");
+            filter = input.value.toUpperCase();
+            ul=document.getElementById('menu');
+            li = document.getElementsByClassName('nav-item');
+    
+    //loop through all the list items, and hide those who don't match the search query
+    for (i = 0; i < li.length; i++) {
+        a = li[i].getElementsByTagName("a")[0];
+        txtValue = a.textContent || a.innerText;
+        if (txtValue.toUpperCase().indexOf(filter) > -1) {
+          li[i].style.display = "";
+        } else {
+          li[i].style.display = "none";
+            //loop through all the list items, and hide those who don't match the search query
+            for (i = 0; i < li.length; i++) {
+                a = li[i].getElementsByTagName("a")[0];
                 txtValue = a.textContent || a.innerText;
                 if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                    second_level[j].parentNode.style.display = "";
-                    break;
+                    li[i].style.display = "";
+                } else {
+                    li[i].style.display = "none";
+                }
+            }
+    
+            // search in the second level navbar
+            var second_level = document.getElementsByClassName('nav-second-level');
+            for(var j = 0;j < second_level.length;j++) {
+                li = second_level[j].getElementsByClassName('nav-item');
+                for(var k = 0;k < li.length;k++) {
+                    a = li[k].getElementsByTagName("a")[0];
+                    txtValue = a.textContent || a.innerText;
+                    if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                        second_level[j].parentNode.style.display = "";
+                        break;
+                    }
                 }
             }
         }
+      }
     }
-    </script>
+        </script>
 {% endblock navigation %}
 {% block content %}
 {% endblock content %}
