topbar links enabled for every portals

--- a/getdinerotoday/templates/components/TopBar.html
+++ b/getdinerotoday/templates/components/TopBar.html
@@ -49,36 +49,33 @@
                                 <li>
                                     <a href="{% url 'user:myprogress' %}"><i class="icon-bell"></i>My Dashboard</a>
                                 </li>
-                                {% if dynamic.is_main_site %}
+                                <!-- {% if dynamic.is_main_site %} -->
                                     <li class="dropdown-divider"></li>
                                     <li>
                                         <a href="{% url 'business:business-credit-builder-tracker' %}"><i
                                                 class="icon-bell"></i>Business Credit Tracker</a>
                                     </li>
-                                {% endif %}
-                                {% if dynamic.is_main_site %}
+                                
                                     <li class="dropdown-divider"></li>
                                     <li>
                                         <a href="{% url 'loanportal:loanapplication' %}"><i
                                                 class="icon-credit-card"></i>Loan
                                             Portal</a>
                                     </li>
-                                {% endif %}
-                                {% if dynamic.is_main_site %}
+                                
                                     <li class="dropdown-divider"></li>
                                     <li>
                                         <a href="{% url 'business:create_specific_portal' %}"><i
                                                 class="icon-briefcase"></i>Saved
                                             Portals</a>
                                     </li>
-                                {% endif %}
-                                {% if dynamic.is_main_site %}
+                                
                                     <li class="dropdown-divider"></li>
                                     <li>
                                         <a href="{% url 'business:guided-creation-progress' %}"><i
                                                 class="icon-briefcase"></i>Guided Creation Progress</a>
                                     </li>
-                                {% endif %}
+                                <!-- {% endif %} -->
                                 <li class="dropdown-divider"></li>
                                 <li>
                                     <a href="{% url 'business:business_credibility_checklist' %}"><i
@@ -98,14 +95,14 @@
                                     </li>
 
                                 {% endif %}
-                                {% if dynamic.is_main_site %}
+                                <!-- {% if dynamic.is_main_site %} -->
                                     <li class="dropdown-divider"></li>
                                     <li>
                                         <a href="{% url 'chromeextension:chromeextensionindex' %}"><i
                                                 class="icon-list"></i>
                                             Extension</a>
                                     </li>
-                                {% endif %}
+                                <!-- {% endif %} -->
                                 <li class="dropdown-divider"></li>
                                 <li>
                                     <a href="{% url 'user:logout' %}"><i class="icon-logout"></i> Logout</a>
