--- a/banking/templates/banking/index.html
+++ b/banking/templates/banking/index.html
@@ -30,7 +30,7 @@
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="{% static 'banking/assets/css/responsive.css' %}">
 
-    <title>Kleui Hybrid Loans</title>
+    <title>Neru Lending Hybrid Loans</title>
 
     <link rel="icon" type="image/png' %}" href="{% static 'banking/assets/img/favicon.png' %}">
 </head>
@@ -674,7 +674,7 @@
         <div class="container">
             <div class="copyright-area-content">
                 <p>
-                    Copyright © 2021 Kleui. All Rights Reserved by
+                    Copyright © 2021 Neru Lending. All Rights Reserved by
                 </p>
             </div>
         </div>
