--- a/banking/templates/banking/footer.html
+++ b/banking/templates/banking/footer.html
@@ -16,7 +16,7 @@
                       <li>
                           <i class='bx bx-envelope'></i>
                           <span>Email</span>
-                          <a href="mailto:info@kleui.com">info@kleui.com</a>
+                          <a href="mailto:info@nerulending.com">info@nerulending.com</a>
                       </li>
                       <li>
                           <i class='bx bx-map'></i>
